Start using a dedicated QThreadPool again instead of a global one

This basically reverts a2b5b5c8f6e09ccfaca8044b34f4d9675c3be14a.

The global thread pool is also available to the user and by changing
the max thread count to something lower than the default, already
running threads get stopped, which can cause segfaults.

Fixes: QTBUG-104593
Change-Id: I21fea3137ea72b3336bc67499f9ee2f846e18845
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>
(cherry picked from commit f286d11852d956e589e30cf32686179baa28f66c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>